# pi2-leaf

./: .gitignore  Dockerfile  app.js  jest.config.js  package-lock.json  package.json  tsconfig.json
CudaProject/: CMakeLists.txt  main.cu
spec/assets/: scope.json  scope2.json
src/: index.ts
src/controllers/charging-provisions/: charging-provisions.interface.ts  charging-provisions.ts
src/controllers/parsers/: safe-harbour-parser.ts  scope-parser.ts  top-up-tax-computation-parser.ts
src/controllers/safe-harbour/: safe-harbour.interface.ts  safe-harbour.ts
src/controllers/scope/: scope.interface.ts  scope.spec.ts  scope.ts
src/controllers/top-up-tax-computation/: top-up-tax-computation.interface.ts  top-up-tax-computation.ts
src/utils/: common.ts  elementary-circuits-directed.ts  homepage.html
